Aggiungi file di supporto al parser
Una volta effettuato il parsing occorre

- verificare che tutti gli import siano prima di tutte le sezioni;
- verificare che all'interno di ogni sezione tutti gli inherit siano prima di tutti i field.

--- a/PseudoXML/Makefile
+++ b/PseudoXML/Makefile
@@ -9,7 +9,7 @@ FLEX_OPTS = -Ppseudo_xm_lgrammatica_
 BISON = bison
 BISON_OPTS = -t -ppseudo_xm_lgrammatica_
 
-OBJS = Absyn.o Buffer.o Lexer.o Parser.o Printer.o
+OBJS = Absyn.o Buffer.o Lexer.o Parser.o Printer.o PseudoXMLParserSupport.o
 
 .PHONY : clean distclean
 
@@ -47,6 +47,9 @@ Parser.o : Parser.c Absyn.h Bison.h
 
 Printer.o : Printer.c Printer.h Absyn.h
 	${CC} ${CCFLAGS} -c Printer.c
+
+PseudoXMLParserSupport.o : PseudoXMLParserSupport.c PseudoXMLParserSupport.h Absyn.h
+	${CC} ${CCFLAGS} -c PseudoXMLParserSupport.c
 
 Test.o : Test.c Parser.h Printer.h Absyn.h
 	${CC} ${CCFLAGS} -c Test.c
