Aggiorna solver dei riferimenti
- aggiorna nomi di alcuni campi di field_entry

- togli parte relativa ai cicli tra field, perché per come è fatto il
  parser non ci possono essere riferimenti circolari, in quanto un
  field non viene creato se si riferisce a un field che ancora non
  esiste.

  Se poi vogliamo aggiungere funzioni di modifica, basta risalire la
  catena dei riferimenti e controllare che il campo non sia già
  presente nella catena.

- aggiungi funzione per ottenere il valore associato a un campo, come puntatore a oggetto Value

--- a/PseudoXML/Makefile
+++ b/PseudoXML/Makefile
@@ -9,7 +9,7 @@ FLEX_OPTS = -Ppseudo_xm_lgrammatica_
 BISON = bison
 BISON_OPTS = -t -ppseudo_xm_lgrammatica_
 
-OBJS = Absyn.o Buffer.o Lexer.o Parser.o PseudoXMLParserSupport.o
+OBJS = Absyn.o Buffer.o Lexer.o Parser.o PseudoXMLParserSupport.o refSolver.o
 
 .PHONY : clean distclean
 
@@ -44,6 +44,9 @@ Lexer.o : Lexer.c Bison.h
 
 Parser.o : Parser.c Absyn.h Bison.h
 	${CC} ${CCFLAGS} -c Parser.c
+
+refSolver.o : refSolver.c PseudoXMLParserSupport.h
+	${CC} ${CCFLAGS} -c refSolver.c
 
 PseudoXMLParserSupport.o : PseudoXMLParserSupport.c PseudoXMLParserSupport.h Absyn.h
 	${CC} ${CCFLAGS} -c PseudoXMLParserSupport.c
