--- a/PseudoXML/Makefile
+++ b/PseudoXML/Makefile
@@ -1,7 +1,7 @@
-## Makefile per Progetto LC (Adattato da BNFC)
+## Makefile per Progetto LC (Corretto)
 
 CC = gcc
-# Flag aggiornati per supportare C11 e funzioni POSIX come strdup
+# Flag per C11 e funzioni POSIX (strdup, fdopen, ecc.)
 CCFLAGS = -g -W -Wall -Wno-unused-parameter -Wno-unused-function -Wno-unneeded-internal-declaration -std=c11 -D_POSIX_C_SOURCE=200809L
 
 FLEX = flex
@@ -10,10 +10,13 @@ FLEX_OPTS = -Ppseudo_xm_lgrammatica_
 BISON = bison
 BISON_OPTS = -t -ppseudo_xm_lgrammatica_
 
-# Lista degli oggetti da compilare
-# Nota: Abbiamo rimosso Printer.o e Test.o, e aggiunto i tuoi moduli custom
+# --- LISTA OGGETTI ---
+# 1. Absyn/Buffer/Lexer/Parser (BNFC)
+# 2. PseudoXMLParserSupport/comment_tracker (Logica Custom)
+# 3. printer (Il tuo Pretty Printer, che si chiama printer.c)
+# 4. test (Il tuo file contenente il main, che si chiama test.c)
 OBJS = Absyn.o Buffer.o Lexer.o Parser.o PseudoXMLParserSupport.o \
-       comment_tracker.o pretty-printer.o main.o
+       comment_tracker.o printer.o test.o
 
 # Nome dell'eseguibile finale
 TARGET = progetto_lc
@@ -45,7 +48,7 @@ Buffer.o : Buffer.c Buffer.h
 Lexer.c : pseudoXMLgrammatica.l
 	${FLEX} ${FLEX_OPTS} -oLexer.c pseudoXMLgrammatica.l
 
-# Compilazione Lexer (Dipende ora da comment_tracker.h)
+# Compilazione Lexer (Dipende da comment_tracker.h perché lo include)
 Lexer.o : Lexer.c Bison.h comment_tracker.h
 	${CC} ${CCFLAGS} -Wno-sign-conversion -c Lexer.c
 
@@ -67,15 +70,16 @@ PseudoXMLParserSupport.o : PseudoXMLParserSupport.c PseudoXMLParserSupport.h Abs
 comment_tracker.o : comment_tracker.c comment_tracker.h
 	${CC} ${CCFLAGS} -c comment_tracker.c
 
-# Pretty Printer personalizzato
-pretty-printer.o : pretty-printer.c PseudoXMLParserSupport.h comment_tracker.h
-	${CC} ${CCFLAGS} -c pretty-printer.c
+# Pretty Printer personalizzato (Nome file: printer.c)
+printer.o : printer.c printer.h PseudoXMLParserSupport.h comment_tracker.h
+	${CC} ${CCFLAGS} -c printer.c
 
-# Main entry point
-main.o : main.c Parser.h PseudoXMLParserSupport.h
-	${CC} ${CCFLAGS} -c main.c
+# Main entry point (Nome file: test.c)
+test.o : test.c Parser.h PseudoXMLParserSupport.h Absyn.h printer.h
+	${CC} ${CCFLAGS} -c test.c
 
 # --- Target Demo ---
+# Crea un file prova.xml se non esiste per testare
 demo : $(TARGET)
-	@echo "--- Esecuzione Demo ---"
-	./$(TARGET) test.cnf
+	@echo "--- Esecuzione Demo su prova.xml ---"
+	./$(TARGET) prova.xml
